--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -335,6 +335,7 @@ CONFIG_INPUT_MISC=y
 CONFIG_INPUT_QPNP_POWER_ON=y
 CONFIG_INPUT_UINPUT=y
 # CONFIG_SERIO_SERPORT is not set
+# CONFIG_VT is not set
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVMEM is not set
 CONFIG_SERIAL_MSM_GENI=y
@@ -441,7 +442,6 @@ CONFIG_HID_MULTITOUCH=y
 CONFIG_HID_NINTENDO=y
 CONFIG_HID_PLANTRONICS=y
 CONFIG_HID_SONY=y
-CONFIG_HID_QVR=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_EHCI_HCD=y
@@ -537,13 +537,11 @@ CONFIG_MSM_VIDEOCC_SM8150=y
 CONFIG_MSM_CAMCC_SM8150=y
 CONFIG_CLOCK_CPU_OSM=y
 CONFIG_MSM_DISPCC_SM8150=y
-CONFIG_MSM_DEBUGCC_SM8150=y
 CONFIG_MSM_CLK_RPMH=y
 CONFIG_MSM_GPUCC_SM8150=y
 CONFIG_MSM_GCC_SM6150=y
 CONFIG_MSM_GPUCC_SM6150=y
 CONFIG_MSM_VIDEOCC_SM6150=y
-CONFIG_MSM_DEBUGCC_SM6150=y
 CONFIG_MSM_CAMCC_SM6150=y
 CONFIG_MSM_DISPCC_SM6150=y
 CONFIG_MSM_SCC_SM6150=y
@@ -553,7 +551,6 @@ CONFIG_MSM_GCC_SDMMAGPIE=y
 CONFIG_MSM_VIDEOCC_SDMMAGPIE=y
 CONFIG_MSM_NPUCC_SDMMAGPIE=y
 CONFIG_MSM_GPUCC_SDMMAGPIE=y
-CONFIG_MSM_DEBUGCC_SDMMAGPIE=y
 CONFIG_HWSPINLOCK=y
 CONFIG_HWSPINLOCK_QCOM=y
 CONFIG_QCOM_APCS_IPC=y
